--- a/css/index.less
+++ b/css/index.less
@@ -1,6 +1,7 @@
 @import "settings";
 
 @import "index/slider";
-@import "index/helper";
+@import "index/links";
+@import "index/story";
 @import "index/featured-links";
 @import "index/news";
