--- a/css/layout.less
+++ b/css/layout.less
@@ -1,5 +1,10 @@
 @import "settings";
 
 @import "layout/header";
+@import "layout/sidebar";
 @import "layout/body";
 @import "layout/footer";
+
+#page{
+  overflow: hidden;
+}
