--- a/css/bootstrap.less
+++ b/css/bootstrap.less
@@ -54,6 +54,19 @@ body{
   background: #fff;
 }
 
+.no-float{
+  float: none;
+}
+
+.table{
+  display: table-row;
+}
+
+.cell{
+  display: table-cell;
+  float: none;
+}
+
 a{
   color: #1d3d86;
 
@@ -67,6 +80,12 @@ a{
   float: left;
   min-height: 1px;
   width: 38.2%;
+
+  @media (max-width: 990px) {
+    float: none;
+    position: static;
+    width: 100%;
+  }
 }
 
 .fibo-right{
@@ -74,6 +93,12 @@ a{
   float: left;
   min-height: 1px;
   width: 61.8%;
+
+  @media (max-width: 990px) {
+    float: none;
+    position: static;
+    width: 100%;
+  }
 }
 
 .abs-wrp{
