--- a/css/index/featured-links.less
+++ b/css/index/featured-links.less
@@ -4,11 +4,19 @@
   h2{
     font-size: 2rem;
     padding: 0 0 0 20px;
+
+    @media (max-width: 700px) {
+      padding: 10px;
+    }
   }
 }
 
 ul#featured-links{
   padding: 20px 0 40px 20px;
+
+  @media (max-width: 700px) {
+    padding: 10px 0;
+  }
 
   li.featured-link{
     background-position: center;
@@ -24,22 +32,25 @@ ul#featured-links{
     }
 
     .overlay{
-      background: fadeOut(@main, 30%);
+      //background: fadeOut(@main, 30%);
       color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       padding: 1rem;
-      text-align: center;
-      text-shadow: 0 0 5px rgba(0,0,0,.5);
-      opacity: .5;
+      text-align: left;
       height: 100%;
       width: 100%;
 
       .lh-box-sizing(border-box);
+      .lh-transition(background ease .25s);
+
+      h5{
+        background: #fff;
+        color: @main;
+        display: inline;
+        line-height: 150%;
+      }
 
       &:hover{
-        opacity: 1;
+        background: rgba(255,255,255,.5);
       }
     }
   }
