--- a/css/index/news.less
+++ b/css/index/news.less
@@ -3,7 +3,11 @@
 
   h2{
     font-size: 2rem;
-    padding: 0;
+    padding: 0 0 10px 20px;
+
+    @media (max-width: 700px) {
+      padding: 0;
+    }
   }
 
   article{
@@ -19,6 +23,10 @@
       padding: 10px;
       height: 100%;
       width: 100px;
+
+      @media (max-width: 700px) {
+        display: none;
+      }
 
       .date{
         background: #fff;
@@ -77,6 +85,10 @@
       vertical-align: top;
       width: 100%;
 
+      @media (max-width: 700px) {
+        padding: 10px 0;
+      }
+
       hr{
         background: #eee;
         margin: 36px 0 .6rem -73px;
@@ -94,7 +106,40 @@
         h3{
           font-size: 1.4rem;
           font-weight: bold;
+          text-decoration: none !important;
           line-height: 100%;
+        }
+
+        &.imaged{
+          background-size: cover;
+          background-position: center;
+          padding: 0;
+          text-align: left;
+          height: 360px;
+
+          .overlay{
+            padding: 1.4rem;
+            height: 100%;
+            width: 100%;
+
+            .lh-transition(background ease .25s);
+          }
+
+          h3{
+            background: #fff;
+            display: inline;
+            line-height: 150%;
+          }
+
+          &:hover{
+            .overlay{
+              background: rgba(255,255,255,.5);
+            }
+
+            h3{
+              color: @main;
+            }
+          }
         }
       }
 
