--- a/css/index/featured-links.less
+++ b/css/index/featured-links.less
@@ -11,14 +11,14 @@
   }
 }
 
-ul#featured-links{
+div#featured-links{
   padding: 20px 0 40px 20px;
 
   @media (max-width: 700px) {
     padding: 10px 0;
   }
 
-  li.featured-link{
+  div.featured-link{
     background-position: center;
     background-size: cover;
     color: #fff;
