--- a/css/index/story.less
+++ b/css/index/story.less
@@ -1,9 +1,7 @@
 #main-story{
-  padding: 20px 0;
+  padding: 20px;
 
   .person{
-    display: block;
-    height: 80px;
     margin-bottom: 20px;
 
     &:before{
@@ -12,39 +10,45 @@
     }
 
     &:after{
+      content: " ";
       clear: both;
+      display: table;
     }
 
-    .photo{
+    .photo-wrapper{
       float: left;
       position: relative;
       min-height: 1px;
+      width: 100px;
+    }
+
+    .photo{
+      overflow: hidden;
       height: 80px;
       width: 80px;
+      margin-right: 20px;
+
+      .lh-border-radius(50%);
 
       img{
         background-size: cover;
         background-position: center;
         margin: 0 20px 10px 0;
-        height: 80px;
         width: 80px;
-
-        .lh-border-radius(50%);
       }
     }
 
-    h3{
-      float: left;
+    .description{
       position: relative;
       min-height: 1px;
-      font-size: 2rem;
-      padding-top: .8rem;
     }
 
-    small{
-      position: relative;
-      min-height: 1px;
-      float: left;
+    h3{
+       font-size: 2rem;
+    }
+
+    h4{
+      font-size: 1.6rem;
     }
   }
 
