--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 header#main-header {
   background-color: #fff;
-  background-image: url('/images/photos/main.jpg');
+  background-image: url('/images/photos/day.jpg');
   background-size: cover;
   background-position: center;
   font-family: 'Roboto', sans-serif;
@@ -18,17 +18,24 @@ header#main-header nav#main-header-nav {
   width: 100%;
   z-index: 1000;
 }
-header#main-header nav#main-header-nav #main-header-nav-bg {
+header#main-header nav#main-header-nav #header-nav-bg-wrapper {
   display: block;
   position: absolute;
+  overflow: hidden;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   opacity: .8;
   z-index: -1;
-  background-image: url('/images/photos/blured/main.jpg');
+}
+header#main-header nav#main-header-nav #main-header-nav-bg {
+  background-image: url('/images/photos/blured/day.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 header#main-header nav#main-header-nav > .impact > .container {
   padding: 0;
@@ -55,6 +62,7 @@ header#main-header nav#main-header-nav .header-nav-list {
 header#main-header nav#main-header-nav .header-nav-list > li {
   display: inline-block;
   font-size: 17px;
+  /*&.parent:hover, */
 }
 header#main-header nav#main-header-nav .header-nav-list > li.parent:hover,
 header#main-header nav#main-header-nav .header-nav-list > li.parent.active {
@@ -175,7 +183,6 @@ header#main-header nav#main-header-nav .header-nav-list > li .nesting-menu-wrapp
   background: #fff;
   z-index: 5;
 }
-header#main-header nav#main-header-nav .header-nav-list > li.parent:hover .nesting-menu-wrapper,
 header#main-header nav#main-header-nav .header-nav-list > li.parent.active .nesting-menu-wrapper {
   display: block;
 }
@@ -309,35 +316,42 @@ header#main-header nav#main-header-nav #main-header-modes .mode ul li:hover {
   background-color: #1d3d86;
   color: #fff;
 }
-header#main-header div#main-header-landing .container {
+header#main-header.full {
+  height: 100vh;
+}
+header#main-header.full div#main-header-landing {
+  height: 100vh;
+}
+header#main-header.full div#main-header-landing .container {
   color: #fff;
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
   position: relative;
   padding-top: 64px;
+  height: 100vh;
   z-index: 2;
 }
-header#main-header div#main-header-landing .container h1 {
+header#main-header.full div#main-header-landing .container h1 {
   font-size: 6vh;
   font-weight: 100;
   text-align: center;
   padding-bottom: 3vh;
 }
-header#main-header div#main-header-landing .container h2 {
+header#main-header.full div#main-header-landing .container h2 {
   font-size: 4vh;
   font-weight: 300;
   text-align: center;
 }
-header#main-header div#main-header-landing .container p {
+header#main-header.full div#main-header-landing .container p {
   text-align: center;
   padding: 1rem 0;
   margin: 0 auto;
   width: 50%;
 }
-header#main-header div#main-header-landing .container .button-wrapper {
+header#main-header.full div#main-header-landing .container .button-wrapper {
   text-align: center;
   padding: 6vh 0 3vh 0;
 }
-header#main-header div#main-header-landing .container .header-button {
+header#main-header.full div#main-header-landing .container .header-button {
   border: 1px solid #fff;
   display: inline-block;
   padding: 3vh 3vw;
@@ -346,17 +360,105 @@ header#main-header div#main-header-landing .container .header-button {
   -moz-box-shadow: 1vh 1vh 0 #ffffff;
   box-shadow: 1vh 1vh 0 #ffffff;
 }
-header#main-header div#main-header-landing .container .header-button:hover {
+header#main-header.full div#main-header-landing .container .header-button:hover {
   margin: 0;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
-header#main-header.full {
-  height: 100vh;
+header#main-header.full div#main-header-landing #main-heder-quicklinks {
+  background: #fff;
+  bottom: 0;
+  color: #000;
+  font-size: 1.6rem;
+  text-shadow: none;
+  position: absolute;
+  padding: 0 20px;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: 100%;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
 }
-header#main-header.full div#main-header-landing {
-  height: 100vh;
+header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper {
+  display: block;
+  float: left;
+  padding: 10px 0;
+  font-weight: 100;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper .link {
+  border-right: 1px solid #eee;
+  padding: 20px;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper:hover {
+  background: #fafafa;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .link-wrapper:last-child .link {
+  border-right: none;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper {
+  display: block;
+  padding: 10px 0;
+  float: right;
+  font-weight: 100;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper .arrow-continue {
+  padding: 20px;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper .arrow-continue .fa {
+  margin-left: 20px;
+}
+header#main-header.full div#main-header-landing #main-heder-quicklinks .arrow-continue-wrapper:hover {
+  background: #fafafa;
+}
+header#main-header.full #header-main-logo {
+  background-image: url("/images/logos/full.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  margin: 40px auto;
+  height: 30vh;
+}
+header#main-header.small {
+  overflow: hidden;
+  height: 240px;
+}
+header#main-header.small div#main-header-landing {
+  height: 240px;
+}
+header#main-header.small div#main-header-landing .container {
+  color: #fff;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  position: relative;
+  padding-top: 84px;
+  height: 240px;
+  z-index: 2;
+}
+header#main-header.small div#main-header-landing .container h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 2rem 0 .6rem 200px;
+}
+header#main-header.small div#main-header-landing .container h2 {
+  display: none;
+}
+header#main-header.small div#main-header-landing .container p {
+  padding: 0 0 0 200px;
+}
+header#main-header.small div#main-header-landing #main-heder-quicklinks {
+  display: none;
+}
+header#main-header.small #header-main-logo {
+  background-image: url("/images/logos/full.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  float: left;
+  height: 140px;
+  width: 170px;
 }
 header#main-header .impact {
   height: 100%;
@@ -384,15 +486,6 @@ header#main-header .gradient {
   width: 100%;
   z-index: 1;
 }
-#header-main-logo {
-  background-image: url("/images/logos/full.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
-  margin: 40px auto;
-  height: 30vh;
-}
 @media (max-width: 992px) {
   #header-nav-aspirant,
   #header-nav-graduate {
@@ -402,11 +495,11 @@ header#main-header .gradient {
 aside#sidebar {
   background: #fafafa;
   position: fixed;
+  display: none;
   float: left;
   overflow-y: scroll;
   height: 100%;
   width: 260px;
-  display: none;
 }
 aside#sidebar #main-sidebar-search {
   background: #1d3d86;
@@ -453,17 +546,45 @@ nav#main-sidebar-nav .sidebar-nav-list > li > a:hover {
 nav#main-sidebar-nav .sidebar-nav-list > li.parent > a:after {
   content: "\f107";
 }
+nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 {
+  display: none;
+}
 nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li a {
   border-top: 1px solid #ffffff;
   border-bottom: 1px solid #e1e1e1;
   display: block;
-  padding: 14px 20px 14px 40px;
+  padding: 14px 20px 14px 30px;
+}
+nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li .lvl-2 {
+  display: none;
 }
 nav#main-sidebar-nav .sidebar-nav-list > li .nesting-menu-wrapper .nesting-menu .lvl-1 > li .lvl-2 a {
   border-top: 1px solid #ffffff;
   border-bottom: 1px solid #e1e1e1;
   display: block;
-  padding: 14px 20px 14px 60px;
+  padding: 14px 20px 14px 40px;
+}
+@media (min-width: 701px) {
+  aside#sidebar {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  body.sidebar {
+    overflow: hidden;
+  }
+  body.sidebar aside#sidebar {
+    display: block;
+  }
+  body.sidebar #page {
+    background: #fff;
+    position: relative;
+    margin-left: 260px;
+    z-index: 5;
+    -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+  }
 }
 footer#main-footer {
   background: #1d3d86;
