--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -1,4 +1,4 @@
-@image-file: 'main.jpg';
+@image-file: 'day.jpg';
 @image: '/images/photos/@{image-file}';
 @blured-image: '/images/photos/blured/@{image-file}';
 
@@ -25,17 +25,25 @@ header#main-header{
     width: 100%;
     z-index: 1000;
 
-    #main-header-nav-bg{
+    #header-nav-bg-wrapper{
       display: block;
       position: absolute;
+      overflow: hidden;
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
       opacity: .8;
       z-index: -1;
+    }
+
+    #main-header-nav-bg{
       background-image: url(@blured-image);
       background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 100vh;
+      width: 100vw;
     }
 
     & > .impact > .container{
@@ -197,7 +205,7 @@ header#main-header{
           }
         }
 
-        &.parent:hover, &.parent.active{
+        /*&.parent:hover, */&.parent.active{
           .nesting-menu-wrapper{
             display: block;
           }
@@ -325,64 +333,175 @@ header#main-header{
     }
   }
 
-  div#main-header-landing{
-
-    .container{
-      color: #fff;
-      text-shadow: 0 2px 5px rgba(0,0,0,.4);
-      position: relative;
-      padding-top: 64px;
-      z-index: 2;
-
-      h1{
-        font-size: 6vh;
-        font-weight: 100;
-        text-align: center;
-        //text-shadow: 0 0 10px rgba(0, 0, 0, .3);
-        padding-bottom: 3vh;
-      }
-
-      h2{
-        font-size: 4vh;
-        font-weight: 300;
-        text-align: center;
-        //text-shadow: 0 0 7px rgba(0, 0, 0, .4);
-      }
-
-      p{
-        text-align: center;
-        padding: 1rem 0;
-        margin: 0 auto;
-        width: 50%;
-      }
-
-      .button-wrapper{
-        text-align: center;
-        padding: 6vh 0 3vh 0;
-      }
-
-      .header-button{
-        border: 1px solid #fff;
-        display: inline-block;
-        padding: 3vh 3vw;
-        margin: -1vh 0 0 -1vh;
-
-        .lh-box-shadow(1vh 1vh 0 #fff);
-
-        &:hover{
-          margin: 0;
-
-          .lh-box-shadow(none);
-        }
-      }
-    }
-  }
-
   &.full{
     height: 100vh;
 
-    div#main-header-landing{
+    div#main-header-landing {
       height: 100vh;
+
+      .container {
+        color: #fff;
+        text-shadow: 0 2px 5px rgba(0, 0, 0, .4);
+        position: relative;
+        padding-top: 64px;
+        height: 100vh;
+        z-index: 2;
+
+        h1 {
+          font-size: 6vh;
+          font-weight: 100;
+          text-align: center;
+          //text-shadow: 0 0 10px rgba(0, 0, 0, .3);
+          padding-bottom: 3vh;
+        }
+
+        h2 {
+          font-size: 4vh;
+          font-weight: 300;
+          text-align: center;
+          //text-shadow: 0 0 7px rgba(0, 0, 0, .4);
+        }
+
+        p {
+          text-align: center;
+          padding: 1rem 0;
+          margin: 0 auto;
+          width: 50%;
+        }
+
+        .button-wrapper {
+          text-align: center;
+          padding: 6vh 0 3vh 0;
+        }
+
+        .header-button {
+          border: 1px solid #fff;
+          display: inline-block;
+          padding: 3vh 3vw;
+          margin: -1vh 0 0 -1vh;
+
+          .lh-box-shadow(1vh 1vh 0 #fff);
+
+          &:hover {
+            margin: 0;
+
+            .lh-box-shadow(none);
+          }
+        }
+      }
+
+      #main-heder-quicklinks {
+        background: #fff;
+        bottom: 0;
+        color: #000;
+        font-size: 1.6rem;
+        text-shadow: none;
+        position: absolute;
+        padding: 0 20px;
+        margin-left: -15px;
+        margin-right: -15px;
+        width: 100%;
+
+        .lh-box-shadow(0 0 30px rgba(0, 0, 0, .25));
+
+        .link-wrapper {
+          display: block;
+          float: left;
+          padding: 10px 0;
+          font-weight: 100;
+
+          .link {
+            border-right: 1px solid #eee;
+            padding: 20px;
+          }
+
+          &:hover {
+            background: #fafafa;
+          }
+
+          &:last-child {
+            .link {
+              border-right: none;
+            }
+          }
+        }
+
+        .arrow-continue-wrapper {
+          display: block;
+          padding: 10px 0;
+          float: right;
+          font-weight: 100;
+
+          .arrow-continue {
+            padding: 20px;
+
+            .fa {
+              margin-left: 20px;
+            }
+          }
+
+          &:hover {
+            background: #fafafa;
+          }
+        }
+      }
+    }
+
+    #header-main-logo{
+      background-image: url("/images/logos/full.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      display: block;
+      margin: 40px auto;
+      height: 30vh;
+    }
+  }
+
+  &.small{
+    overflow: hidden;
+    height: 240px;
+
+    div#main-header-landing {
+      height: 240px;
+
+      .container {
+        color: #fff;
+        text-shadow: 0 2px 5px rgba(0, 0, 0, .4);
+        position: relative;
+        padding-top: 84px;
+        height: 240px;
+        z-index: 2;
+
+        h1 {
+          font-size: 2rem;
+          font-weight: 300;
+          padding: 2rem 0 .6rem 200px;
+        }
+
+        h2 {
+          display: none;
+        }
+
+        p{
+          padding: 0 0 0 200px;
+        }
+      }
+
+      #main-heder-quicklinks {
+        display: none;
+      }
+    }
+
+    #header-main-logo{
+      background-image: url("/images/logos/full.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      display: block;
+      float: left;
+      height: 140px;
+      width: 170px;
     }
   }
 
@@ -409,16 +528,6 @@ header#main-header{
     width: 100%;
     z-index: 1;
   }
-}
-
-#header-main-logo{
-  background-image: url("/images/logos/full.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
-  margin: 40px auto;
-  height: 30vh;
 }
 
 // Compact
