--- a/css/layout/header.less
+++ b/css/layout/header.less
@@ -11,6 +11,26 @@ header#main-header{
   position: relative;
   overflow: hidden;
 
+  #header-nav-bg-wrapper{
+    display: block;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    opacity: .8;
+    z-index: -1;
+
+    #main-header-nav-bg{
+      background-image: url(@blured-image);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      width: 100vw;
+    }
+  }
+
   nav#main-header-nav{
     background-color: @main;
     //background-image: url("/images/header-blured.jpg");
@@ -24,27 +44,6 @@ header#main-header{
     //overflow: hidden;
     width: 100%;
     z-index: 1000;
-
-    #header-nav-bg-wrapper{
-      display: block;
-      position: absolute;
-      overflow: hidden;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      opacity: .8;
-      z-index: -1;
-    }
-
-    #main-header-nav-bg{
-      background-image: url(@blured-image);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      height: 100vh;
-      width: 100vw;
-    }
 
     & > .impact > .container{
       padding: 0;
@@ -336,6 +335,10 @@ header#main-header{
   &.full{
     height: 100vh;
 
+    #main-header-nav-bg{
+      height: 100vh;
+    }
+
     div#main-header-landing {
       height: 100vh;
 
@@ -461,6 +464,10 @@ header#main-header{
   &.small{
     overflow: hidden;
     height: 240px;
+
+    #main-header-nav-bg{
+      height: 240px;
+    }
 
     div#main-header-landing {
       height: 240px;
