--- a/css/layout/sidebar.less
+++ b/css/layout/sidebar.less
@@ -106,6 +106,11 @@ nav#main-sidebar-nav{
   body.sidebar{
     overflow: hidden;
 
+    #lord-wrap{
+      overflow: hidden;
+      width: 100vw;
+    }
+
     aside#sidebar{
       display: block;
     }
@@ -115,6 +120,7 @@ nav#main-sidebar-nav{
       position: relative;
       margin-left: 260px;
       z-index: 5;
+      width: 100vw;
       //min-width: 320px;
 
       .lh-box-shadow(0 0 40px rgba(0,0,0,.5));
